--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,20 +1,20 @@
-# Use an official Node.js runtime as the base image
-FROM node:18-alpine
+# Use an official Node runtime image that matches your version.
+FROM node:22-alpine
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json first
+# Copy dependency definitions
 COPY package*.json ./
 
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the application files
+# Copy the rest of your application code
 COPY . .
 
-# Expose the application port
+# Expose the port your Node.js app listens on (adjust if needed)
 EXPOSE 3001
 
-# Command to run the application
-CMD ["node", "server.js"]
+# Start your application
+CMD ["npm", "start"]
