/api/contacts and /api/gallery added (backend seperated)

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
-VITE_API_URL=http://localhost:3001
+PORT= 3001
+
+#dbconnection
+
+#apiconnection
+CLOUDINARY_CLOUD_NAME=dfao1nbvf
+CLOUDINARY_API_KEY=467926555149119
+CLOUDINARY_API_SECRET=mykcUjjy_gIakHEBIyZ9-6Op2vA
 
 
-IP=14.139.171.170
